kustomize/base/backend-flightserver.yaml

kind: Service
apiVersion: v1
metadata:
  name: flightserver
spec:
  selector:
    app: flightserver
  ports:
    - port: 5000 # Default port for image
  type: NodePort
  nodePort: 30000
